--- a/Itihad to/index.html
+++ b/Itihad to/index.html
@@ -22,7 +22,7 @@
 
 
     <!-- Your Styles -->
-    <link rel="stylesheet" href="flexslider.css">
+    <link rel="stylesheet" href="css/flexslider.css">
     <link href="css/styles.css" rel="stylesheet">
 
 
@@ -78,16 +78,15 @@
         <div class="rows">
           <img src="images/photo_2023-05-22_03-26-44.jpg" alt="" class="weImages">
           <p class="weParagraphs">
-            <span>الرئيس التنفيذي <br class="br">  فهد الدرويش</span>
-            يتميز بمهاراته في الإعراب وحراسة المرمى ولديه خبرة 5 سنوات في الجامعة حيث أنه يدرس في كلية الطب وعلى وش تخرج.
-          </p>
+            <span>رئيس الاتحاد <br class="br">  فهد الدرويش</span>
+            طالب طب في السنة الخامسة, من محافظة حماة، يمتلك مهارة في الإعراب وحراسة المرمى، وهو الأقدم والأكثر خبرة بين طلاب الاتحاد.          </p>
         </div>
 
         <div class="rows">
           <img src="images/photo_2023-05-22_03-26-48.jpg" alt="" class="weImages" style="--color:#BD1550">
           <p class="weParagraphs">
             <span>مسؤول الرياضة <br class="br"> يزن لاطة </span>
-            يتمتع بقدرات استثنائية في جمع شمل أفراد الاتحاد وقربهم من بعضهم, بالإضافة إلى إتقانه للغة الإنجليزية مع القدرة على تدريسها, ومهارات فريدة من نوعها في كرة القدم. برضه طالب طب.
+            طالب طب في السنة الثانية، من محافظة ادلب، حاصل على رخصة معتمدة لتدريس اللغة الانكليزية، كما أنه هاوٍ في كرة القدم.
           </p>
         </div>
 
@@ -95,10 +94,60 @@
           <img src="images/photo_2023-05-22_00-07-02.jpg" alt="" class="weImages" style="--color:#0B486B">
           <p class="weParagraphs">
             <span>مسؤول الثقافة <br class="br"> أحمد دلّال </span>
-            لديه التزام كبير بأي مسؤولية تقع على عاتقه ووجه بشوش بحبور دائم. كما يمتلك معرفة متقنة لقواعد الشعر واللغة العربية بقاموسها الكبير, مع قدراته المذهلة في كرة القدم. كمان برضه طالب طب.
-          </p>
+            طالب طب في السنة الاولى، من محافظة حلب، يمتلك معرفة متقنة لقواعد الشعر و اللغة العربية بمعجمها الكبير، ولديه مهارات عالية في كرة القدم.          </p>
+        </div>
+
+        <div class="rows" id="more">
+          <a href="nothing.html" id="more_button">اضغط لقراءة المزيد</a>
         </div>
       </section>
+
+      <div id="slider" class="flexslider">
+        <ul class="slides">
+          <li>
+            <div class="slide1">
+              <div class="content">
+                <div class="forH2">
+                  <h2>رياضة</h2>
+                </div>
+                <div class="forP">
+                  <p>
+                    مباريات كرة قدم ودية مع اتحاد الطلاب اليمنيين بحضور جماهيري كبير
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="slide2">
+              <div class="content">
+                <div class="forH2">
+                  <h2>ترفيه</h2>
+                </div>
+                <div class="forP">
+                  <p>
+                    رحلة الكارتينج التي تضمنت سباق سيارات مع استكشاف طبيعة مدينة دينزلي
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="slide3">
+              <div class="content">
+                <div class="forH2">
+                  <h2>أُخوّة</h2>
+                </div>
+                <div class="forP">
+                  <p>
+                    انضم اتحادنا لفعالية أقامها اتحاد الطلاب اليمنيين للاحتفال بذكرى وحدة اليمن
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
 
       <h1>خدماتنا</h1>
       <section id="services">
@@ -129,7 +178,7 @@
 
         <div class="services">
           <span>
-            تقديم المساعدة والدعم للطلاب في واجهتهم أية مشكلات في الجامعة. 
+            تقديم المساعدة والدعم للطلاب في حال واجهتهم أية مشكلات في الجامعة. 
           </span>
         </div>
 
