--- a/Itihad to/index.html
+++ b/Itihad to/index.html
@@ -49,7 +49,7 @@
         <div id="navbar">
           <ul>
             <li><a class="hovers" href="#services">خدماتنا</a></li>
-            <li><a class="hovers" href="#activities">فعاليات</a></li>
+            <li><a class="hovers" href="#slider">فعاليات</a></li>
             <li><a class="hovers" href="#we">من نحن</a></li>
             <li><a class="hovers" href="#contact">تواصل</a></li>
           </ul>
