--- a/Itihad to/index.html
+++ b/Itihad to/index.html
@@ -79,14 +79,15 @@
           <img src="images/photo_2023-05-22_03-26-44.jpg" alt="" class="weImages">
           <p class="weParagraphs">
             <span>رئيس الاتحاد <br class="br">  فهد الدرويش</span>
-            طالب طب في السنة الخامسة, من محافظة حماة، يمتلك مهارة في الإعراب وحراسة المرمى، وهو الأقدم والأكثر خبرة بين طلاب الاتحاد.          </p>
+            طالب طب في السنة الخامسة, من محافظة حماة، يمتلك مهارة في الإعراب وحراسة المرمى، وهو الأقدم والأكثر خبرة بين طلاب الاتحاد.          
+          </p>
         </div>
 
         <div class="rows">
           <img src="images/photo_2023-05-22_03-26-48.jpg" alt="" class="weImages" style="--color:#BD1550">
           <p class="weParagraphs">
             <span>مسؤول الرياضة <br class="br"> يزن لاطة </span>
-            طالب طب في السنة الثانية، من محافظة ادلب، حاصل على رخصة معتمدة لتدريس اللغة الانكليزية، كما أنه هاوٍ في كرة القدم.
+            طالب طب في السنة الثانية، من محافظة ادلب، حاصل على رخصة معتمدة لتدريس اللغة الانكليزية، كما أنه هاوٍ في لعب كرة القدم.
           </p>
         </div>
 
@@ -94,7 +95,8 @@
           <img src="images/photo_2023-05-22_00-07-02.jpg" alt="" class="weImages" style="--color:#0B486B">
           <p class="weParagraphs">
             <span>مسؤول الثقافة <br class="br"> أحمد دلّال </span>
-            طالب طب في السنة الاولى، من محافظة حلب، يمتلك معرفة متقنة لقواعد الشعر و اللغة العربية بمعجمها الكبير، ولديه مهارات عالية في كرة القدم.          </p>
+            طالب طب في السنة الاولى، من مدينة جرابلس، يمتلك معرفة في قواعد الشعر و اللغة العربية بمعجمها الكبير، ولديه مهارات عالية في لعب كرة القدم.          
+          </p>
         </div>
 
         <div class="rows" id="more">
@@ -112,7 +114,7 @@
                 </div>
                 <div class="forP">
                   <p>
-                    مباريات كرة قدم ودية مع اتحاد الطلاب اليمنيين بحضور جماهيري كبير
+                    إقامة مباريات كرة قدم ودية مع اتحاد الطلاب اليمنيين بحضور جماهيري كبير
                   </p>
                 </div>
               </div>
@@ -178,7 +180,7 @@
 
         <div class="services">
           <span>
-            تقديم المساعدة والدعم للطلاب في حال واجهتهم أية مشكلات في الجامعة. 
+            تقديم المساعدة والدعم للطلاب في حال واجهتهم أية مشاكل في الجامعة. 
           </span>
         </div>
 
